# WebsiteChangeMonitor

./: .gitignore  .replit  Dockerfile  Pasted-INFO-werkzeug-172-31-196-123-19-Sep-2024-17-05-00-GET-static-css-styles-css-HTTP-1-1-304--1726767234581.txt  Pasted-INFO-werkzeug-Restarting-with-stat-INFO-main-DATABASE-URL-is-set-INFO-main-Database-initialized-s-1726691452036.txt  Pasted-IntegrityError-sqlalchemy-exc-IntegrityError-psycopg2-errors-UniqueViolation-duplicate-key-value--1726690630629.txt  README.md  deploy.sh  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  tasks.py
.github/workflows/: deploy.yml
instance/: site.db
migrations/versions/: 2203a0f673c4_initial_migration_for_user_and_website_.py  8c38ae6f06d5_add_notification_email_to_user.py  safe_add_notification_email.py
static/css/: styles.css
static/js/: app.js
templates/: base.html  index.html  landing.html  login.html  register.html
utils/: email.py
