[tool.poetry]
name = "repl-nix-sitechangemonitor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
apscheduler = "^3.10.4"
flask-apscheduler = "^1.13.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
email-validator = "^2.2.0"
werkzeug = "^3.0.4"
wtforms = "^3.1.2"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
